# pcglite

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml
include/pcglite/: pcglite.hpp
test/: CMakeLists.txt  example.cpp  identical.cpp  static.cpp  std.cpp
